# credit-risk-ml

./: LICENSE  Makefile  README.md  pyproject.toml
credit_risk/: __init__.py  dataset.py  features.py  plots.py
credit_risk/modeling/: predict.py  train.py
notebooks/: eda.ipynb
reports/: model_comparison.csv
