[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "credit_risk"
version = "0.0.1"
description = "Machine Learning for credit  default prediction with Lending Club Data"
authors = [
  { name = "Dhruvi Kadhiwala" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["credit_risk"]
include = ["pyproject.toml", "credit_risk/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["credit_risk"]
force-sort-within-sections = true

